# ros_yolov7

./: .env  .env.dev  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  compose.yml  docker-compose.yml  init_xhost.sh  lancer.sh  package.xml  requirements.txt  setup.py
launch/: pose_estimate.launch
msg/: BboxKp.msg  BboxKpList.msg
scripts/: ros_pose_estimate.py
src/: example_subscriber.py  pose-estimate.py
src/deep_sort/: deep_sort.py
src/deep_sort/sort/: detection.py
src/models/: experimental.py  yolo.py
src/utils/: __init__.py  google_utils.py  plots.py
